--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -213,6 +213,7 @@ Název souboru: {{ Campain.attachmentName}}
 
 
     <div class="modal-footer">
+        <button class="btn btn-success" ng-click="sent()">Odeslat</button>
         <button class="btn btn-primary" ng-click="ok()">OK</button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
