--- a/src/main/webapp/WEB-INF/ui/views/datasource/browse.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/browse.html
@@ -16,7 +16,7 @@
             <div class="input-group">
                 <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search(f)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
                 <div class="input-group-btn">
-                    <button class="btn btn-default"  ng-click="search()" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    <button class="btn btn-default"  ng-click="search(f)" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                 </div>
             </div>
        
@@ -31,7 +31,6 @@
                 </td>
             </tr>
         </table>
-{{DataSource.recordsCount}}
         <pagination  max-size = "10" total-items="DataSource.recordsCount" page="currentPage" on-select-page="paginate(page-1)" ></pagination>
 
     </div>
