--- a/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
@@ -1,94 +1,85 @@
-<div class="row">
-    <div class="container"> </div>
-    <div ng-controller="DataSourceCreateController">
-        <div class="modal-header">
-            <h3 style="">Datový zdroj</h3>
-        </div>
-        <div class="modal-body ">
-            <div>
-
-                <form novalidate class="form-horizontal" ng-submit="save()" name="dataSource"  >
-
-                    <div class="col-md-2">
+<div class="container" ng-controller="DataSourceCreateController"> 
+    <div class="modal-header">
+        <h3 style="">Datový zdroj</h3>
+    </div>
+    <div class="modal-body ">
+        <div class="row" >
+            <div class="col-md-12">
+                <form novalidate class="form-horizontal" ng-submit="save()" name="form"  >
+                    <div class="form-group col-md-4">
                         <input type="hidden" ng-model="DataSource.id" interpol-model="id" server-error="id" name="id"/>
-
-                        <div class="form-group">
-                            <label class="control-label" for="name">Název</label>
-                            <input type="text" id = "name" name="name" ng-model="DataSource.name"  interpol-model="name" server-error="name"/>
+                        <label class="control-label col-sm-3"  for="name">Název</label>
+                        <div class="col-sm-9">
+                            <input class="input-sm" type="text" id = "name" name="name" ng-model="DataSource.name"  interpol-model="name" server-error="name"/>
                             <div class="errors"  show-inter="name" >
                                 <error-message error="name" ></error-message>   
                             </div>
+                        </div>
+                    </div>  
+                    <div class="col-md-8">
+                        <div class="col-md-4 well" >
+                            Název souboru: {{ fileU.name}}<br/>Typ souboru: {{ fileU.type}} 
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label class="control-label col-sm-4" >Nahrát soubor</label>
+                            <div class="col-sm-8">
+                                <input type="file" ng-model="files" file-change id="file" >
+                            </div>
+                            <div ng-show="loadingfile" class="col-md-4">
+                                <img src="img/ajax-loader.gif" width="220" height="19" alt="ajax-loader"/>
+                            </div>
                         </div>  
-                        <h4 style="">Pole</h4>
-                        <div ng-repeat="f in DataSource.dataStructure.dataStructureFields">
-                            <div class="form-group">
-                                <label class="control-label" for="dataStructure.dataStructureFields{{f.index}}.name">Pole {{f.index}}</label>
-
-                                <input type="text" id = "dataStructure.dataStructureFields{{f.index}}.name" name="dataStructure.dataStructureFields[{{f.index}}].name" ng-model="f.name"  interpol-model="dataStructure.dataStructureFields[{{f.index}}].name" server-error="dataStructure.dataStructureFieldsCollection[{{f.index}}].name"/>
-                                <div class="errors"  style="height: 1em;" show-inter="dataStructure.dataStructureFields[{{f.index}}].name" >
-                                    <error-message error="dataStructure.dataStructureFields[{{f.index}}].name" ></error-message>   
-                                </div>
-
-                            </div>
-
-                        </div>
-
-
-
                     </div>
-                      </form>
-                    <div class="col-md-10">
-                        <div class="row">
-                            <div class="col-md-5" >
-                                <div class="form-group">
-                                    <input type="file" ng-model="files" file-change id="file" >
-
-                                </div>
+                    <div class="row">
+                        <h4 style="">Data</h4>
+                        <table class="table table-condensed table-bordered" style="margin-bottom: 0px;">
+                            <thead>
+                            <th ng-repeat="f in DataSource.dataStructure.dataStructureFields" class="form-group">
+                            <div   show-inter="dataStructure.dataStructureFields[{{f.index}}].name" >
+                                <div class=" alert alert-danger" ><error-message error="dataStructure.dataStructureFields[{{f.index}}].name" ></error-message>  </div> 
                             </div>
-                           <div class="col-md-5">
-                                <div ng-show="loadingfile">
-                                    <img src="img/ajax-loader.gif" width="220" height="19" alt="ajax-loader"/>
-
-                                </div>
-                            </div>
-                        </div>
-
-        
-                           <div class="row">
-                <h4 style="">Náhled dat</h4>
-                <table class="table table-striped table-condensed table-bordered" style="font-size: 0.9em;">
-                    <thead>
-                    <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
-                        {{f.name}}
-                    </th>
-                    </thead>
-
-                    <tr ng-repeat="row in DataSource.dataStructure.previewRows" >
-                        <td ng-repeat="field in row.dataSourceFields" >
-                            {{ field.value | format : DataSource.dataStructure.dataStructureFields[field.index].dataType }}
-                        </td>
-                    </tr>
-                </table>
-                           </div>
+                            <input   class="form-control input-sm" type="text" id = "dataStructure.dataStructureFields{{f.index}}.name" name="dataStructure.dataStructureFields[{{f.index}}].name" ng-model="f.name"  interpol-model="dataStructure.dataStructureFields[{{f.index}}].name" server-error="dataStructure.dataStructureFields[{{f.index}}].name"/>
+                            </th>
+                            </thead>
+                        </table>
+                    </div>
+                </form>
             </div>
-
-
         </div>
 
+        <div class="row" ng-controller="DataSourceRowsListCtrl">
+            <table class="table table-striped table-condensed table-bordered" >
+                <thead>
 
+                    <tr>
+                        <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
+                <div class="input-group">
+                    <input class="form-control input-sm" placeholder="Search"  on-enter-blur on-blur-change="search(f)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
+                    <div class="input-group-btn">
+                        <button class="btn btn-default btn-sm"  ng-click="search(f)" type="submit"><i class="glyphicon glyphicon-search "></i></button>
+                    </div>
+                </div>
 
+                </th>
+                </tr> 
 
+                </thead>
 
+                <tr ng-repeat="row in dataSourceRows" >
+                    <td ng-repeat="field in row.dataSourceFields" >
+                        {{ field.value | format : DataSource.dataStructure.dataStructureFields[field.index].dataType }}
+                    </td>
+                </tr>
+            </table>
+            <pagination  max-size = "10" total-items="DataSource.recordsCount" page="currentPage" on-select-page="paginate(page-1)" ></pagination>
 
-
-
-
+        </div>
     </div>
 
-    <div class="modal-footer">
+    <div class="modal-footer" >
         <button class="btn btn-primary" ng-click="ok()">OK</button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
 
 </div>
-</div>
+
