--- a/src/main/webapp/WEB-INF/ui/views/campain/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/list.html
@@ -1,7 +1,14 @@
 
 <div class="panel panel-default">
+            <div class="col-lg-6">
+            <button class="btn btn-success " ng-click="sent()">Odeslat</button>
+            <button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+        </div>
     <div class="panel-heading">
+
         <h3 class="panel-title">Kampaně</h3>
+
     </div>
     <div class="panel-body">
         <div  >
@@ -14,7 +21,7 @@
                     </tr>
                     <tr>
                         <th><div class="input-group" style="width: 50%">
-                            <input class="form-control " placeholder="Search"  on-enter-blur on-blur-change="search()"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
+                    <input class="form-control " placeholder="Search"  on-enter-blur on-blur-change="search()"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
                     <div class="input-group-btn">
                         <button class="btn btn-default"  ng-click="search()" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
