--- a/src/main/webapp/WEB-INF/ui/views/datasource/browse.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/browse.html
@@ -1,10 +1,9 @@
-
-<div class="modal-header">
-    <h3 style="">Datový zdroj</h3>
-</div>
-<div class="modal-body ">
-    <div class="row">
-        <h4 style="">Náhled datového zdroje</h4>
+<div class="panel panel-default panel-primary">
+    <div class="panel-heading">
+        <h1 class="panel-title">Náhled datového zdroje: {{DataSource.name}}</h1>
+    </div>
+    <div class="panel-body">
+    <div class="col-lg-12">
         <table class="table table-striped table-condensed table-bordered" style="font-size: 0.9em;">
             <thead>
                             <tr>
@@ -37,7 +36,4 @@
 
 </div>
 
-<div class="modal-footer">
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-</div>
 
