--- a/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
@@ -1,48 +1,69 @@
-<div class="container" ng-controller="DataSourceCreateController"> 
-    <div class="modal-header">
-        <h3 style="">Datový zdroj</h3>
+
+<div class="panel panel-default panel-in">
+    <div class="panel-heading">
+        <h1 class="panel-title">Upravit datový zdroj: {{DataSource.name}}</h1>
     </div>
-    <div class="modal-body ">
+    <div class="panel-body">
+
         <div class="row" >
             <div class="col-md-12">
                 <form novalidate class="form-horizontal" ng-submit="save()" name="form"  >
-                    <div class="form-group col-md-4">
-                       
-                        
-                        <label class="control-label col-sm-3"  for="name">Název</label>
-                        <div class="col-sm-9">
-                                        <div show-inter="name"  class="alert alert-danger " ><error-message error="name" ></error-message>  </div> 
-                           
-                            
-                            <input type="hidden" ng-model="DataSource.id" interpol-model="id" server-error="id" name="id"/>
-                            <input class="input-sm form-control" type="text" id = "name" name="name" ng-model="DataSource.name"  interpol-model="name" server-error="name"/>
-              
-                        </div>
-                    </div>  
-                    
+                    <div class="col-md-4">
+
+
+                        <div class="form-group">
+                            <label class="control-label col-sm-3"  for="name">Název</label>
+                            <div class="col-sm-9">
+                                <div show-inter="name"  class="alert alert-danger " ><error-message error="name" ></error-message>  </div> 
+                                <input type="hidden" ng-model="DataSource.id" interpol-model="id" server-error="id" name="id"/>
+                                <input class="input-sm form-control" type="text" id = "name" name="name" ng-model="DataSource.name"  interpol-model="name" server-error="name"/>
+
+                            </div>
+                        </div> 
+                        <div class="form-group">
+                            <label class="control-label col-sm-3"  for="name">kategorie</label>
+                            <div class="col-sm-9">
+                                <span  class="nullable">
+                                    <select ng-model="DataSource.category" ng-options="c.key as c.value for c in categories">
+                                        <option value="">Zvolit kategorii</option>
+                                    </select>
+                                </span>
+
+                            </div>
+                        </div> 
+                        <div class="form-group">
+                            <label class="control-label col-sm-3"  for="description">description</label>
+                            <div class="col-sm-9">
+                                <div show-inter="description"  class="alert alert-danger " ><error-message error="description" ></error-message>  </div> 
+                             
+                                <input class="input-sm form-control" type="text" id = "description" name="description" ng-model="DataSource.description"  interpol-model="description" server-error="description"/>
+
+                            </div>
+                        </div> 
+
+                    </div>
+
                     <div class="col-md-8">
-                        <div class="col-md-4 well" >
-                            Název souboru: {{ fileU.name}}<br/>Typ souboru: {{ fileU.type}} 
-                        </div>
-                        <div class="form-group col-md-4">
+                        <div class="form-group col-md-8">
                             <label class="control-label col-sm-4" >Nahrát soubor</label>
-                            <div class="col-sm-8">
+                            <div class="col-sm-4">
                                 <input type="file" ng-model="files" file-change id="file" >
                             </div>
-                            <div ng-show="loadingfile" class="col-md-4">
+                            <div ng-show="loadingfile" >
                                 <img src="img/ajax-loader.gif" width="220" height="19" alt="ajax-loader"/>
                             </div>
                         </div>  
+                        <div class="col-md-4 well" >
+                            Název souboru: {{ fileU.name}}<br/>Typ souboru: {{ fileU.type}} 
+                        </div>
                     </div>
-                    <div class="row">
-                        <h4 style="">Data</h4>
-                        <table class="table table-condensed table-bordered" style="margin-bottom: 0px;">
+                    <div class="row  col-lg-12" >
+                        <h3>Sloupce</h3>
+                        <table class="table table-condensed table-bordered" style="margin-bottom: 0px">
                             <thead>
                             <th ng-repeat="f in DataSource.dataStructure.dataStructureFields" class="form-group  has-warning has-feedback">
-                   
-                                <div show-inter="dataStructure.dataStructureFields[{{f.index}}].name"  class="alert alert-danger " ><error-message error="dataStructure.dataStructureFields[{{f.index}}].name" ></error-message>  </div> 
-                           
-                            <input interpol-model  server-error = "dataStructure.dataStructureFields[{{f.index }}].name"  class="form-control input-sm" type="text" id = "dataStructure.dataStructureFields[{{f.index }}].name" name="dataStructure.dataStructureFields[{{f.index}}].name" ng-model="f.name" />
+                            <div show-inter="dataStructure.dataStructureFields[{{f.index}}].name"  class="alert alert-danger " ><error-message error="dataStructure.dataStructureFields[{{f.index}}].name" ></error-message>  </div> 
+                            <input interpol-model  server-error = "dataStructure.dataStructureFields[{{f.index}}].name"  class="form-control input-sm" type="text" id = "dataStructure.dataStructureFields[{{f.index}}].name" name="dataStructure.dataStructureFields[{{f.index}}].name" ng-model="f.name" />
                             </th>
                             </thead>
                         </table>
@@ -52,10 +73,9 @@
             </div>
         </div>
 
-        <div class="row" ng-controller="DataSourceRowsListCtrl">
+        <div class="row  col-lg-12" ng-controller="DataSourceRowsListCtrl" style="margin-top: 1em;">
             <table class="table table-striped table-condensed table-bordered" >
                 <thead>
-
                     <tr>
                         <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
                 <div class="input-group">
@@ -64,10 +84,8 @@
                         <button class="btn btn-default btn-sm"  ng-click="search(f)" type="submit"><i class="glyphicon glyphicon-search "></i></button>
                     </div>
                 </div>
-
                 </th>
                 </tr> 
-
                 </thead>
 
                 <tr ng-repeat="row in dataSourceRows" >
@@ -78,13 +96,14 @@
             </table>
             <pagination  max-size = "10" total-items="DataSource.recordsCount" page="currentPage" on-select-page="paginate(page-1)" ></pagination>
 
+
+        </div>
+        <div class="row " >
+            <hr>
+            <div class="col-lg-12 text-right">
+                <button class="btn btn-primary" ng-click="ok()">Uložit</button>
+                <button class="btn btn-warning" ng-click="cancel()">Zrušit</button>
+            </div>
         </div>
     </div>
-
-    <div class="modal-footer" >
-        <button class="btn btn-primary" ng-click="ok()">OK</button>
-        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-    </div>
-
-</div>
 
