--- a/src/main/webapp/WEB-INF/ui/views/datasource/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/list.html
@@ -1,49 +1,52 @@
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Datové zdroje</h3>
-  </div>
-  <div class="panel-body">
-    <div class="col-md-10" >
-        
-        <table  class="table table-striped table-condensed"  >
-            <thead><tr>
-                    <th>Název </th>
-            <th>Počet záznamů</th>
-            <th class="text-right">Akce</th>
-            </tr>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h1 class="panel-title">Datové zdroje</h1>
+    </div>
+    <div class="panel-body">
+
+        <table  class="table table-striped  table-bordered" >
+            <thead>
                 <tr>
-              <th><div class="input-group">
+                    <th class="col-lg-4 text-info">Název </th>
+                    <th class="text-info" >Kategorie</th>
+                    <th class="text-info" >Popis</th>
+                    <th class="text-info" >Vyvořeno</th>
+                    <th class="text-right text-info" >Počet&nbsp;záznamů</th>
+                    <th class="text-center text-info">Akce</th>
+                </tr>
+                <tr>
+                    <th><div class="input-group input-group-sm">
                 <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search()"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
                 <div class="input-group-btn">
-                    <button class="btn btn-default"  ng-click="search()" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    <button class="btn btn-default btn-xs"  ng-click="search()" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                 </div>
             </div></th>
-            <th></th>
+            <th colspan="4"></th>
+
             <th class="text-right">
- <a class="btn btn-primary btn-sm pull-right" ng-click="openForm()"><i class="icon-plus-sign icon-white"></i> Nový zdroj</a>
+                <a class="btn btn-primary btn-xs pull-right" ng-click="openForm()"><i class="icon-plus-sign icon-white"></i> Nový zdroj</a>
             </th>
             </tr>
-            </thead><tfoot>
-                <tr><td colspan="3">
-            <pagination total-items="DataSource.recordsCount" page="currentPage" on-select-page="paginate(page-1)" ></pagination>
-            </td>
-            </tr>
-            </tfoot>
+            </thead>
             <tbody>
                 <tr ng-repeat="d in datasources" >
                     <td>{{d.name}}</td>
-                    <td>{{d.recordsCount}}</td>
-                    <td class="text-right">
-                        <div class="btn-group text-left">
-                            <button type="button" class="btn btn-sm btn-warning dropdown-toggle" data-toggle="dropdown">
+                    <td>{{d.category}}</td>
+                    <td>{{d.description}}</td>
+                    <td>{{d.dateUpdated}}</td>
+                    <td class="text-right" >{{d.recordsCount}}</td>
+                    <td class="text-center col-lg-1">
+                        <div class="btn-group" >
+                            <button type="button" class="btn btn-xs btn-warning dropdown-toggle" data-toggle="dropdown">
                                 Action <span class="caret"></span>
                             </button>
-                            <ul class="dropdown-menu" >
+                            <ul class="dropdown-menu text-left" >
                                 <li><a href="#">Email</a></li>
-                                <li><a href="#">Dopis</a></li>
-                                <li><a ng-click="openBrowse(d.id)"  >Zobrazit data</a></li>
-                                <li><a ng-click="openForm(d.id)"  >Upravit</a></li>
+
+                                <li><a  ng-href="#/datasource/data/{{d.id}}"  >Zobrazit data</a></li>
+                                <li><a  ng-href="#/datasource/edit/{{d.id}}"  >Upravit</a></li>
+
                                 <li class="divider"></li>
                                 <li><a ng-click="openDeleteDialog(d.id, d.name)" >Smazat</a></li>
                             </ul>
@@ -53,12 +56,12 @@
             </tbody>
 
         </table>
-
+        <pagination total-items="DataSource.recordsCount" page="currentPage" on-select-page="paginate(page-1)" ></pagination>
         <div>
         </div>
-    </div>
 
-  </div>
+
+    </div>
 </div>
 
 
