--- a/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
@@ -1,5 +1,5 @@
 
-<div class="panel panel-default panel-in">
+<div class="panel panel-primary panel-in">
     <div class="panel-heading">
         <h1 class="panel-title">Upravit datový zdroj: {{DataSource.name}}</h1>
     </div>
