--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -195,8 +195,7 @@
 
                     <div  class="col-lg-12">
 
-                        <iframe class="col-lg-7" ng-src="{{templateUrl}}"    height="400px" > </iframe>
-
+                        <embed class="col-lg-7" embed-src="{{previewUrl}}"   type="application/pdf"   height="400px" /> 
                         <div class="col-lg-5">
 
 
