--- a/src/main/webapp/WEB-INF/ui/views/datasource/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/list.html
@@ -25,7 +25,7 @@
             <th colspan="4"></th>
 
             <th class="text-right">
-                <a class="btn btn-primary btn-xs pull-right" ng-click="openForm()"><i class="icon-plus-sign icon-white"></i> Nový zdroj</a>
+                <a class="btn btn-primary btn-xs pull-right" href="#/datasource/new"><i class="icon-plus-sign icon-white"></i> Nový zdroj</a>
             </th>
             </tr>
             </thead>
