--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -118,62 +118,19 @@
                 </div>
             </div>
             <div>
-                   <div class="row" style="padding-top: 1em">
+                <div class="row" style="padding-top: 1em">
 
                     <div class="col-lg-6">
-                                      <a class="btn btn-default dropdown-toggle btn-sm              font-size: 12px;
-                                    font-weight: 700;
-                                    color: #bbb;
-                                    text-transform: uppercase;
-                                    letter-spacing: 1px;" ng-click="isCollapsed = !isCollapsed">
-                                          <i class="glyphicon glyphicon-arrow-down glyphicon-sm" style="float: left; margin-right: 1em;padding: 2px 0;"></i> 
-                                          <span style="letter-spacing: 1px;">P59loha</span></a>
+                        <a class="btn btn-default dropdown-toggle btn-sm              font-size: 12px;
+                           font-weight: 700;
+                           color: #bbb;
+                           text-transform: uppercase;
+                           letter-spacing: 1px;" ng-click="isCollapsed = !isCollapsed">
+                            <i class="glyphicon glyphicon-arrow-down glyphicon-sm" style="float: left; margin-right: 1em;padding: 2px 0;"></i> 
+                            <span style="letter-spacing: 1px;">Příloha</span></a>
                     </div>
-                   </div>
-                <div class="row" collapse="isCollapsed" style="padding-top: 1em">
-
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            <div class="form-group">
-                                <label class="control-label col-lg-4"  for="customizeAttachments">Nahrát soubor</label>
-                                <div class="col-lg-8">
-                                    <input type="file" ng-model="files" file-change id="file" >
-                                </div>
-                            </div>  
-
-                        </div>
-                        <div ng-show="loadingfile">
-                            <img src="img/ajax-loader.gif" width="220" height="19" alt="ajax-loader"/>
-                        </div>
-                        <pre>Název souboru: {{ Campain.attachmentName}}<br/>Typ souboru: {{ Campain.attachmentFileType}} 
-                        </pre>
-                        <div class="form-group">
-                            <label class="control-label col-lg-3"   for="attachmentOutputName">Název přílohy</label>
-                            <div class="col-lg-9">
-                                <input  class="form-control input-sm" type="text" id = "attachmentOutputName" name="attachmentOutputName" ng-model="Campain.attachmentOutputName"  interpol-model="attachmentOutputName" server-error="attachmentOutputName"/>
-                                <div class="errors"  show-inter="attachmentOutputName" >
-                                    <error-message error="attachmentOutputName" ></error-message>   
-                                </div>
-
-                            </div>
-                        </div> 
-
-
-
-                        <div class="form-group">
-                            <label class="control-label col-lg-4"  for="customizeAttachments">Přizpůsobit přílohu</label>
-                            <div class="col-lg-8">
-                                <input  class="input-sm" ng-disabled="Campain.attachmentFileSystemName === undefined || Campain.attachmentFileSystemName === null" type="checkbox" ng-change="customizeAttachment()" id = "customizeAttachments" name="customizeAttachments" ng-model="Campain.customizeAttachments"  interpol-model="customizeAttachments" server-error="customizeAttachments"/>
-                                <div class="errors"  show-inter="customizeAttachments" >
-                                    <error-message error="customizeAttachments" ></error-message>   
-                                </div>
-                            </div>
-                        </div>  
-
-                    </div>
-
                 </div>
-
+   
                 <div class="row" style="margin-bottom: 1em;">
                     <div class=" col-lg-10 col-lg-offset-1">
 
