--- a/src/main/webapp/WEB-INF/ui/views/campain/attachment.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/attachment.html
@@ -3,6 +3,7 @@
             <h3 style="">Příloha</h3>
         </div>
         <div class="modal-body ">
+            <form ng-form="attachment" >
             <div class="row">
              <div class="row" collapse="isCollapsed" style="padding-top: 1em">
 
@@ -43,7 +44,7 @@
                         </div>  
 
                     </div>
-
+</form>
                 </div>
 
 
