--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -192,7 +192,7 @@
                         </div>
                     </div>
 
-
+     <button class="btn btn-success" ng-click="addAttachment()">Odeslat</button>
 
                 </div>
             </div>
