--- a/src/main/webapp/WEB-INF/ui/views/campain/attachment.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/attachment.html
@@ -20,12 +20,12 @@
                         <div ng-show="loadingfile">
                             <img src="img/ajax-loader.gif" width="220" height="19" alt="ajax-loader"/>
                         </div>
-                        <pre>Název souboru: {{ Attachment.attachmentName}}<br/>Typ souboru: {{ Attachment.attachmentFileType}} 
+                        <pre>Název souboru: {{ attachment.attachmentName}}<br/>Typ souboru: {{ attachment.attachmentFileType}} 
                         </pre>
                         <div class="form-group">
                             <label class="control-label col-lg-3"   for="attachmentOutputName">Název přílohy</label>
                             <div class="col-lg-9">
-                                <input  class="form-control input-sm" type="text" id = "attachmentOutputName" name="attachmentOutputName" ng-model="Attachment.attachmentOutputName"  interpol-model="attachmentOutputName" server-error="attachmentOutputName"/>
+                                <input  class="form-control input-sm" type="text" id = "attachmentOutputName" name="attachmentOutputName" ng-model="attachment.attachmentOutputName"  interpol-model="attachmentOutputName" server-error="attachmentOutputName"/>
                   
                                 </div>
 
@@ -33,11 +33,12 @@
                         </div> 
 
 
-
+  
                         <div class="form-group">
+                            {{attachment.attachmentFileSystemName}}
                             <label class="control-label col-lg-4"  for="customizeAttachments">Přizpůsobit přílohu</label>
                             <div class="col-lg-8">
-                                <input  class="input-sm" ng-disabled="Attachment.attachmentFileSystemName === undefined || Attachment.attachmentFileSystemName === null" type="checkbox" ng-change="customizeAttachment()" id = "customizeAttachments" name="customizeAttachments" ng-model="Attachment.customizeAttachments"  interpol-model="customizeAttachments" server-error="customizeAttachments"/>
+                                <input  class="input-sm" ng-disabled="attachment.attachmentFileSystemName === undefined || attachment.attachmentFileSystemName === null" type="checkbox" ng-change="customizeAttachment()" id = "customizeAttachments" name="customizeAttachments" ng-model="attachment.customizeAttachments"  interpol-model="customizeAttachments" server-error="customizeAttachments"/>
                
                                 </div>
                             </div>
@@ -46,6 +47,51 @@
                     </div>
 </form>
                 </div>
+
+                <div class="row">
+
+
+                    <div  class="col-lg-12">
+
+                        <embed class="col-lg-7" embed-src="{{previewUrl}}"  src="{{previewUrl}}"  type="application/pdf"   height="400px" /> 
+                        <div class="col-lg-5">
+
+
+
+                            <div class="col-lg-6">
+                                <h4 style="
+                                    font-size: 12px;
+                                    font-weight: 700;
+                                    color: #bbb;
+                                    text-transform: uppercase;
+                                    letter-spacing: 1px;">Použadované proměné</h4>
+                                <p ng-repeat="f in templateFields">
+                                    {{f}}
+                                </p>
+                            </div>
+                            <div class="col-lg-6">
+
+                                <h4 style="
+                                    font-size: 12px;
+                                    font-weight: 700;
+                                    color: #bbb;
+                                    text-transform: uppercase;
+                                    letter-spacing: 1px;">Dostupné proměné</h4>
+                                <p ng-repeat="f in dataStructureFields">
+
+                                    ###{{f.name}}###
+                                </p>
+
+                            </div>
+                            <div class="form-group">
+                                <input   type="hidden" id = "attachmentFileSystemName" name="attachmentFileSystemName" ng-model="attachment.attachmentFileSystemName" />
+                                <input   type="hidden" id = "attachmentName" name="attachmentName" ng-model="attachment.attachmentName" />
+                                <input   type="hidden" id = "attachmentType" name="attachmentType" ng-model="attachment.attachmentType" />
+                            </div> 
+
+
+                        </div>
+                    </div>
 
 
 
