--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -130,7 +130,7 @@
                             <span style="letter-spacing: 1px;">Příloha</span></a>
                     </div>
                 </div>
-   
+
                 <div class="row" style="margin-bottom: 1em;">
                     <div class=" col-lg-10 col-lg-offset-1">
 
@@ -146,71 +146,32 @@
 
                 </div>
 
+                <p ng-repeat="a in Campain.campainAttachments">
 
-                <div class="row">
-
-
-                    <div  class="col-lg-12">
-
-                        <embed class="col-lg-7" embed-src="{{previewUrl}}"  src="{{previewUrl}}"  type="application/pdf"   height="400px" /> 
-                        <div class="col-lg-5">
+                    {{a.attachmentFileSystemName}}&nbsp;{{a.customizeAttachments}} &nbsp; <button class="btn btn-success" ng-click="addAttachment(a)">Upravit přílohu</button>
+                </p>
 
 
 
-                            <div class="col-lg-6">
-                                <h4 style="
-                                    font-size: 12px;
-                                    font-weight: 700;
-                                    color: #bbb;
-                                    text-transform: uppercase;
-                                    letter-spacing: 1px;">Použadované proměné</h4>
-                                <p ng-repeat="f in templateFields">
-                                    {{f}}
-                                </p>
-                            </div>
-                            <div class="col-lg-6">
+                <button class="btn btn-success" ng-click="addAttachment()">Přidat přílohu</button>
 
-                                <h4 style="
-                                    font-size: 12px;
-                                    font-weight: 700;
-                                    color: #bbb;
-                                    text-transform: uppercase;
-                                    letter-spacing: 1px;">Dostupné proměné</h4>
-                                <p ng-repeat="f in datasourceSelected.dataStructure.dataStructureFields">
-
-                                    ###{{f.name}}###
-                                </p>
-
-                            </div>
-                            <div class="form-group">
-                                <input   type="hidden" id = "attachmentFileSystemName" name="attachmentFileSystemName" ng-model="Campain.attachmentFileSystemName" />
-                                <input   type="hidden" id = "attachmentName" name="attachmentName" ng-model="Campain.attachmentName" />
-                                <input   type="hidden" id = "attachmentType" name="attachmentType" ng-model="Campain.attachmentType" />
-                            </div> 
-
-
-                        </div>
-                    </div>
-
-     <button class="btn btn-success" ng-click="addAttachment()">Odeslat</button>
-
-                </div>
             </div>
-
-
-        </form>
-
-
-        <div class="row " >
-            <div class="col-lg-12 text-right">
-                <button class="btn btn-success" ng-click="sent()">Odeslat</button>
-                <button class="btn btn-primary" ng-click="ok()">OK</button>
-                <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-            </div>
-        </div>
-
-
     </div>
+
+
+</form>
+
+
+<div class="row " >
+    <div class="col-lg-12 text-right">
+        <button class="btn btn-success" ng-click="sent()">Odeslat</button>
+        <button class="btn btn-primary" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    </div>
+</div>
+
+
+</div>
 </div>
 
 
